--- a/index.html
+++ b/index.html
@@ -7,27 +7,23 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700&family=Exo:wght@500&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Exo:wght@500&display=swap" rel="stylesheet"> 
     <link href="styles/style.css" rel="stylesheet">
 
     <title>Animatie lime</title>
 </head>
 <body>
-    <h1>
-        <span>L</span>
-        <span>i</span>
-        <span>m</span>
-        <span>e</span>
-    </h1>
 
-    <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-    </ul>
+    <main>
+        <h1>
+            <span>L</span>
+            <span>i</span>
+            <span>m</span>
+            <span>e</span>
+        </h1>
+
+        <div></div>
+    </main>
     
 </body>
 </html>
